jenkins-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: speedtest
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
