ingress-all.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "jenkins-cert"
    networking.gke.io/v1beta1.FrontendConfig: "jenkins-security-config"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: gce
  defaultBackend:
    service:
      name: jenkins
      port:
        number: 8080
